--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 asgiref==3.7.2
+black==23.12.1
+click==8.1.7
 Django==5.0
+django-environ==0.11.2
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
+inflection==0.5.1
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
 phonenumbers==8.13.27
+platformdirs==4.1.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.9.0
+uritemplate==4.1.1
