--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.7.2
 black==23.12.1
 click==8.1.7
+dj-rest-auth==5.0.2
 Django==5.0
 django-environ==0.11.2
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-standardized-errors==0.12.6
 drf-yasg==1.21.7
 inflection==0.5.1
 mypy-extensions==1.0.0
@@ -12,6 +15,7 @@ packaging==23.2
 pathspec==0.12.1
 phonenumbers==8.13.27
 platformdirs==4.1.0
+PyJWT==2.8.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 sqlparse==0.4.4
