--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.12.1
 click==8.1.7
 dj-rest-auth==5.0.2
 Django==5.0
+django-cors-headers==4.3.1
 django-environ==0.11.2
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
