--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-rest-auth==5.0.2
 Django==5.0
 django-cors-headers==4.3.1
 django-environ==0.11.2
+django-filter==23.5
 django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
